--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #61dafb;
 }
 
 .App-logo {
@@ -39,7 +40,7 @@
 
 .footer {
   width: 100%;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.356);
 }
 
 /* DivTable.com */
@@ -85,7 +86,6 @@
   width: 100px;
 }
 
-
 .f1 {
   margin-bottom: 40px;
   margin-left: 10%;
@@ -93,4 +93,7 @@
 .footerPic7 {
   height: 100px;
   width: 100px;
+}
+.menu {
+  background-color: #61dafb;
 }
