--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,5 @@
 .App {
   text-align: center;
-  background-color: #61dafb;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -26,7 +14,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #107f9e;
 }
 
 @keyframes App-logo-spin {
@@ -40,7 +28,7 @@
 
 .footer {
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.356);
+  background-color: rgba(0, 0, 0, 0.795);
 }
 
 /* DivTable.com */
@@ -95,5 +83,19 @@
   width: 100px;
 }
 .menu {
-  background-color: #61dafb;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+}
+.menu1 {
+  margin-left: 5%;
+  margin-bottom: 5%;
+}
+
+.menuheading {
+  text-align: center;
+}
+.MuiImageListItemBar-subtitle {
+  font-size: 50px;
+  height: stretch;
 }
